--- a/nonograms/css/style.css
+++ b/nonograms/css/style.css
@@ -29,6 +29,7 @@ body {
     min-width: 250px;
     max-width: 1920px;
     gap: 35px;
+    padding-bottom: 10px;
 }
 
 .app__header,
@@ -289,6 +290,7 @@ body {
 .levels-window {
     display: flex;
     flex-direction: column;
+    padding-bottom: 10px;
     gap: 25px;
     text-align: center;
     position: absolute;
@@ -300,7 +302,6 @@ body {
 
 .levels-window__button {
     margin: 0 auto;
-    margin-bottom: 25px;
     min-width: 150px;
     font-size: 22px;
 }
